--- a/src/application.rc
+++ b/src/application.rc
@@ -1,22 +1,22 @@
 GLFW_ICON ICON "icon.ico"
 
 1 VERSIONINFO
-FILEVERSION     1,0,0,0
-PRODUCTVERSION  1,0,0,0
+FILEVERSION     1,0,0,1
+PRODUCTVERSION  1,0,0,1
 BEGIN
   BLOCK "StringFileInfo"
   BEGIN
     //BLOCK "080904E4"  // English UK
     BLOCK "040904E4"    // English US
     BEGIN
-      //VALUE "CompanyName", "raylib technologies"
-      VALUE "FileDescription", "A cool game made with raylib (www.raylib.com)"
-      VALUE "FileVersion", "1.0.0"
-      VALUE "InternalName", "cool game"
-      VALUE "LegalCopyright", "(c) 2025 YOUR NAME"
+      //VALUE "CompanyName", "issymissy"
+      VALUE "FileDescription", "Flow fields demo utilizing raylib"
+      VALUE "FileVersion", "1.1.0"
+      VALUE "InternalName", "flowyboy"
+      VALUE "LegalCopyright", "(c) 2025 izzyfix"
       //VALUE "OriginalFilename", "raylib_app"
-      VALUE "ProductName", "A cool game"
-      VALUE "ProductVersion", "1.0.0"
+      VALUE "ProductName", "whats a product"
+      VALUE "ProductVersion", "1.0.1"
     END
   END
   BLOCK "VarFileInfo"
